ksk-verbs added and in words2zerofilled.py you may add Øs

--- a/parad/Makefile
+++ b/parad/Makefile
@@ -1,4 +1,5 @@
 BASE=demo
+DELIM=,
 .SUFFIXES:
 
 .PHONY : renamed raw zerofilled words features rawmphonemes clean
@@ -28,13 +29,13 @@ $(BASE)-renamed.pstr : $(BASE)-raw.csv $(BASE)-newnames.csv
 	python3 ../raw2named.py $< $@ $(BASE)-newnames.csv
 
 $(BASE)-raw.csv : $(BASE)-zerofilled.csv $(BASE)-affixes.csv
-	python3 ../zerofilled2raw.py $< $@ $(BASE)-affixes.csv
+	python3 ../zerofilled2raw.py -d '$(DELIM)' $< $@ $(BASE)-affixes.csv
 
 $(BASE)-zerofilled.csv : $(BASE)-words.csv
-	python3 ../words2zerofilled.py $< $@
+	python3 ../words2zerofilled.py -d '$(DELIM)' $< $@
 
 $(BASE)-words.csv : $(BASE)-table.csv
-	python3 ../parad2words.py -s "."  $< $@
+	python3 ../parad2words.py -d '$(DELIM)' -s "."  $< $@
 
 $(BASE)-features.text : $(BASE)-raw.csv
 	cat $< | cut -d ',' -f 1 | cut -d ' ' -s -f 2,3 | tr ' ' '\n' | sort | uniq > $@
