Revert "some test materials added etc"
This reverts commit 5da67d1d5447cc142011564c22bd3eaa7d28794d.

--- a/fi/Makefile
+++ b/fi/Makefile
@@ -18,41 +18,31 @@ ofi-lexic-n.lexc: ofi-lexic-n.text
 ofi-lexic-v.lexc: ofi-lexic-v.text
 	python3 entries2lexc.py Verbs < ofi-lexic-v.text > ofi-lexic-v.lexc
 
-ofi-guess.ofst: ofi-guess-lex.fst ofi-rules.fst Makefile
+ofi-guess-n.ofst: ofi-guess-lex-n.fst ofi-rules.fst Makefile
 	hfst-compose-intersect -e -a -1 $< -2 ofi-rules.fst |\
 	hfst-compose -2 delete.fst |\
 	hfst-invert |\
-	hfst-minimize -o ofi-guess.fst
-	hfst-fst2fst -w -i ofi-guess.fst -o $@
+	hfst-minimize -o ofi-guess-n.fst
+	hfst-fst2fst -w -i ofi-guess-n.fst -o $@
 
-#ofi-guess-n.ofst: ofi-guess-lex-n.fst ofi-rules.fst Makefile
-#	hfst-compose-intersect -e -a -1 $< -2 ofi-rules.fst |\
-#	hfst-compose -2 delete.fst |\
-#	hfst-invert |\
-#	hfst-minimize -o ofi-guess-n.fst
-#	hfst-fst2fst -w -i ofi-guess-n.fst -o $@
-#
-#ofi-guess-v.ofst: ofi-guess-lex-v.fst ofi-rules.fst Makefile
-#	hfst-compose-intersect -e -a -1 $< -2 ofi-rules.fst |\
-#	hfst-compose -2 delete.fst |\
-#	hfst-invert |\
-#	hfst-minimize -o ofi-guess-v.fst
-#	hfst-fst2fst -w -i ofi-guess-v.fst -o $@
+ofi-guess-v.ofst: ofi-guess-lex-v.fst ofi-rules.fst Makefile
+	hfst-compose-intersect -e -a -1 $< -2 ofi-rules.fst |\
+	hfst-compose -2 delete.fst |\
+	hfst-invert |\
+	hfst-minimize -o ofi-guess-v.fst
+	hfst-fst2fst -w -i ofi-guess-v.fst -o $@
 
-ofi-guess-lex.fst: ofi-guess-lex-n.lexc ofi-guess-lex-v.lexc ofi-guess-aff.lexc
-	hfst-lexc -E -f openfst-tropical -o $@ ofi-guess-aff.lexc ofi-guess-lex-n.lexc ofi-guess-lex-v.lexc
+ofi-guess-lex-n.fst: ofi-guess-lex-n.lexc ofi-guess-aff.lexc
+	hfst-lexc -E -f openfst-tropical -o $@ ofi-guess-aff.lexc $<
 
-#ofi-guess-lex-n.fst: ofi-guess-lex-n.lexc ofi-guess-aff.lexc
-#	hfst-lexc -E -f openfst-tropical -o $@ ofi-guess-aff.lexc $<
-#
-#ofi-guess-lex-v.fst: ofi-guess-lex-v.lexc ofi-guess-aff.lexc
-#	hfst-lexc -E -f openfst-tropical -o $@ ofi-guess-aff.lexc $<
+ofi-guess-lex-v.fst: ofi-guess-lex-v.lexc ofi-guess-aff.lexc
+	hfst-lexc -E -f openfst-tropical -o $@ ofi-guess-aff.lexc $<
 
-#ofi-guess-lex-n.lexc : ofi-guespat-n.text
-#	python3 guespat2lexc.py < $< > $@
+ofi-guess-lex-n.lexc : ofi-guespat-n.text
+	python3 guespat2lexc.py < $< > $@
 
-ofi-guess-lex-n.lexc : ofi-pat-n.csv ../pat-proc.py
-	python3 ../pat-proc.py -m g -n Nouns $< > $@
+#ofi-guess-lex-n.lexc : ofi-pat-n.csv ../pat-proc.py
+#	python3 ../pat-proc.py -m g -n Verbs $< > $@
 
 ofi-guess-lex-v.lexc : ofi-pat-v.csv ../pat-proc.py
 	python3 ../pat-proc.py -m g -n Verbs $< > $@
